--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,16 @@
 
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.25</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
@@ -54,6 +59,13 @@
 <!--            <artifactId>pf-cda-core</artifactId>-->
 <!--            <version>2.1.0</version>-->
 <!--        </dependency>-->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.pfsw/pf-cda-core &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.pfsw</groupId>-->
+<!--            <artifactId>pf-cda-core</artifactId>-->
+<!--            <version>2.3.0</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 </project>
